tests/purs/failing/881.out
Error found:
in module [33mMain[0m
at tests/purs/failing/881.purs:10:1 - 13:12 (line 10, column 1 - line 13, column 12)

  Multiple value declarations exist for [33mfoo[0m.

in type class instance
[33m            [0m
[33m  Main.Foo X[0m
[33m            [0m

See https://github.com/purescript/documentation/blob/master/errors/DuplicateValueDeclaration.md for more information,
or to contribute content related to this error.

